--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 let fuelLevel=document.querySelector("input[name=fuelLevel]");
                 let cargoMass=document.querySelector("input[name=cargoMass]");
                 if(pilotNameInput.value===""||copilotName.value===""||fuelLevel.value===""||cargoMass.value===""){
-                alert("All fields are required!");
+                alert("Make sure to enter valid information for each field!");
                 event.preventDefault();
             }
         });  
